[package]
name = "roman_numerals"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
phf = { version = "0.11.2", features = ["macros"] }
regex = "1.10.3"
